try fix centering on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-counter .fh5co-heading h2,
 #fh5co-event .fh5co-heading h2 {
   color: #011d0c;
-  text-align: center;
+  text-align: center !important;
 }
 #fh5co-counter .fh5co-heading span,
 #fh5co-event .fh5co-heading span {
@@ -1024,12 +1024,12 @@ form label {
   font-weight: bold;
   color: #011d0c;
   font-family: "Amsterdam", Arial, serif;
-  text-align: center;
+  text-align: center !important;
 }
 @media screen and (max-width: 768px) {
   .fh5co-heading h2 {
     font-size: 40px;
-    text-align: center;
+    text-align: center !important;
   }
 }
 .fh5co-heading p {
